[package]
name = "hyper-client-io-wizard"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Client IO builder for hyper-1"

categories = ["network-programming", "web-programming", "web-programming::http-client"]
documentation = "https://docs.rs/hyper-client-io-wizard"
homepage = "https://github.com/swizard0/hyper-client-io-wizard"
repository = "https://github.com/swizard0/hyper-client-io-wizard"
keywords = ["hyper", "http", "https", "client", "request", "response"]
readme = "README.md"

[dependencies]
log = "^0.4"
http = "^1.0"
futures = "^0.3"
async-socks5 = "^0.5"
tower-service = "^0.3"

hyper = { version = "^1", features = ["full"] }
tokio = { version = "^1", features = ["full"] }
hyper-util = { version = "^0.1", features = ["full"] }

hickory-resolver.version = "^0.24"
hickory-resolver.features = [
  "system-config",
  "tokio-runtime",
  "dns-over-rustls",
  "dns-over-tls",
  "dns-over-https-rustls",
  "dns-over-https"
]
