[package]
name = "primitive-curl"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Code example for `hyper-client-io-wizard`"

[dependencies]
hyper-client-io-wizard = { path = "../.." }

log = "^0.4"
http = "^1.0"
futures-util = "^0.3"
http-body-util = "^0.1"
pretty_env_logger = "^0.5"

clap = { version = "^4", features = ["cargo", "derive"] }
hyper = { version = "^1", features = ["full"] }
tokio = { version = "^1", features = ["full"] }
